list-view: do not try to activate a NULL selection

It is possible to give focus to the list view with nothing selected. On
pressing Enter, Nautilus would try to activate a null list of items and
therefore segfault. Fix this by doing nothing if there is no selection.

https://bugzilla.gnome.org/show_bug.cgi?id=773150